# RACE

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  RESULTS.json  eval_efficiency.sh  eval_readability.sh  pyproject.toml
data/leetcode/: evaluation_tests.jsonl
data/leetcode_efficiency/: complexity_evaluation_data.jsonl  complexity_evaluation_test_cases.jsonl
race/: __init__.py  _version.py
race/codeeval/: evaluate_pipeline_apps_style.py  evaluate_pipeline_classeval.py  evaluate_pipeline_evalplus.py  evaluate_pipeline_leetcode_style.py  evaluation_utils_evalplus.py  execution_utils.py  execution_utils_evalplus.py  metrics_utils.py
race/codeeval/human_eval/: evaluation.py  execution.py
race/codegen/: generate_pipeline.py  model.py  prompts.py  requirements.txt  utils.py
race/codeprocess/: parser.py
race/dataloader/: __init__.py  classeval.py  humaneval.py  leetcode.py  leetcode_efficiency.py  leetcode_efficiency_complex_problem.py  mbpp.py  utils.py
scripts/: eval_c_correctness.sh  eval_c_maintainability.sh  gen_correctness.py  gen_correctness.sh  gen_efficiency.py  gen_efficiency.sh  gen_maintainability.py  gen_maintainability.sh  gen_readability.py  gen_readability.sh  get_metric_correctness.py  get_metric_efficiency.py  get_metric_maintainability.py  get_metric_overall.py  get_metric_readability.py  parse_generated_file.py
